<resources>
    <string name="app_name" translatable="false">Pills</string>
    <string name="add_pill">Add pill</string>
    <string name="main">Main</string>
    <string name="close">Close</string>
    <string name="pill_name">Pills name</string>
    <string name="time_to_take">Time to take</string>
    <string name="dose">Dosage</string>
    <string name="save_button">Save</string>
</resources>